SERVER-20287 make write/readConcern majority use writeMajority rather than votingMajority